--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,11 +2,11 @@
 
 /* Global Styles */
 :root {
-  --primary-color: #003699;
-  --dark-color: #333333;
-  --light-color: #f4f4f4;
-  --danger-color: #dc3545;
-  --success-color: #28a745;
+  --primary-color: #B27CFF;
+  --dark-color: #cbc024;
+  --light-color: #c7b0cf;
+  --danger-color: #490e68;
+  --success-color: #2898a7;
 }
 
 * {
@@ -19,7 +19,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
+  background-color: rgb(244, 241, 241);
   color: #333;
 }
 
@@ -93,7 +93,7 @@ img {
 /* Cards */
 .card {
   padding: 1rem;
-  border: #ccc 1px dotted;
+  border: rgb(228, 244, 163) 1px dotted;
   margin: 0.7rem 0;
 }
 
